--- a/iam-web/src/main/webapp/WEB-INF/web.xml
+++ b/iam-web/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,10 @@
     http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	
-    <listener>
+	<!--<listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    
+    </listener>-->
+       
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
